fixed spacing issues

--- a/src/app/favorites/favorites.component.css
+++ b/src/app/favorites/favorites.component.css
@@ -1,7 +1,7 @@
 main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 20px;
 }
@@ -10,7 +10,7 @@ main {
   width: 1000px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 section {
